# nu_crew2

./: README.md  pyproject.toml  report.md
src/nu_crew2/: crew.py  main.py
src/nu_crew2/tools/: github_project_fetcher_tool.py
