[project]
name = "nu_crew2"
version = "0.1.0"
description = "nu_crew2 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0"
]

[project.scripts]
nu_crew2 = "nu_crew2.main:run"
run_crew = "nu_crew2.main:run"
train = "nu_crew2.main:train"
replay = "nu_crew2.main:replay"
test = "nu_crew2.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
